src/app/home/home.page.scss
.slider {
  width: 100%;
  height: 100%;
  overflow-x: scroll;
  overflow-y: hidden;
}

.slide {
  float: left;
  width: 200%;
  height: 100%;
}

.holder {
  width: 100%;
}

.display {
  height: 35%;
  border-style: solid;
  border-color: gray;
  background-color: #b0b28e;
  margin: 0px;
  font-family: sans-serif;
  font-size: 28px;
  font-weight: bold;

}
.list {
  background-color: #b0b28e;
}
.gap {
  background-color: #404257;
}

.heading {
  font-size: 20px;
  font-weight: bold;
  text-align: center;
}
.heading2 {
  font-size: 20px;
  font-weight: bold;
  text-align: center;
}
.dialPad{
  bottom: 0;
  position: fixed;
  width: 100%;
  background-color: #404257;
}
.Control-btn{
  margin: 0;
  padding: 0;
  background-color: #404257;
}
.dialPad .keys-btn button{
  top:0;
  float:left;
  color:#111;
  font-size: 34px;
  font-weight: bold;
  height:65px;
  border:none;
  width:33%;
  cursor:pointer;
  line-height:36px;
  user-select:none;
  position:relative;
  text-align:center;
  margin:0 .4% .4% 0;
  background:linear-gradient(#BCBBC0, #BCBBC0);
}
.clearfix {
  margin: 0 10px;
}
.dialPad .keys-btn .clearfix button:last-child{
  margin-right:0;
}
.dialPad .keys-btn .exponent{
  top:-15%;
  font-size: 5px;
  text-indent:2px;
  position:absolute;
  font-weight:normal;
}
.dialPad .keys-btn .denominator{
  position:relative;
}

.dialPad .keys-btn .imp{
  color:#111;
  background:#BCBBC0;
  background:linear-gradient( #BCBBC0,#BCBBC0);
}

@media(min-height:568px){
  .dialPad .keys-btn button{
    height:55px;
  }
}

@media(min-height:610px){
  .dialPad .keys-btn button{
    height:65px;
  }
}

@media(min-height:700px){
  .dialPad .keys-btn button{
    height:75px;
  }
}

@media(min-height:770px){
  .dialPad .keys-btn button{
    height:85px;
  }
}
@media(min-height:1000px){
  .dialPad .keys-btn button{
    height:110px;
  }
}

